// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Show More" link 1`] = `
<ul
  className="menu"
>
  <li
    className="menu-header"
    key="header-TRK"
  >
    qualifiers.TRK
  </li>
  <span
    key="foo"
  >
    foo
  </span>
  <span
    key="bar"
  >
    bar
  </span>
  <SearchShowMore
    allowMore={true}
    key="more-TRK"
    onMoreClick={[MockFunction]}
    onSelect={[MockFunction]}
    qualifier="TRK"
    selected={false}
  />
</ul>
`;

exports[`renders different components and dividers between them 1`] = `
<ul
  className="menu"
>
  <li
    className="menu-header"
    key="header-FIL"
  >
    qualifiers.FIL
  </li>
  <span
    key="zux"
  >
    zux
  </span>
  <li
    className="divider"
    key="divider-TRK"
  />
  <li
    className="menu-header"
    key="header-TRK"
  >
    qualifiers.TRK
  </li>
  <span
    key="foo"
  >
    foo
  </span>
  <span
    key="bar"
  >
    bar
  </span>
</ul>
`;

exports[`should render no results 1`] = `
<div
  id="no-results"
/>
`;
